Fix Share button cut off in iPad portrait mode

--- a/theme/home.less
+++ b/theme/home.less
@@ -639,6 +639,13 @@
             }
         }
         .detailview {
+            .yt-button, button.home-share-button {
+                display: block;
+                width: 100%;
+                margin-bottom: 0.5rem;
+                font-size: 1rem !important;
+                padding: 0.7rem 1rem !important;
+            }
             .actions .card-action {
                 max-width: 10rem;
                 .button.attached .icon:not(.xicon) {
